# os-cloud-config

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements-py3.txt  test-requirements.txt  tox.ini
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
os_cloud_config/: __init__.py  _i18n.py  exception.py  flavors.py  glance.py  keystone.py  keystone_pki.py  neutron.py  nodes.py  ssh.py  ssl_pki.py  utils.py
os_cloud_config/cmd/: generate_keystone_pki.py  generate_ssl_ca.py  generate_ssl_cert.py  init_heat.py  init_keystone.py  init_keystone_heat_domain.py  init_swift.py  register_nodes.py  setup_endpoints.py  setup_flavors.py  setup_neutron.py  upload_kernel_ramdisk.py
os_cloud_config/cmd/tests/: test_generate_keystone_pki.py  test_init_keystone.py  test_init_keystone_heat_domain.py  test_register_nodes.py  test_setup_endpoints.py  test_setup_flavors.py  test_setup_neutron.py  test_upload_kernel_ramdisk.py
os_cloud_config/cmd/utils/: _clients.py  _environment.py  environment.py
os_cloud_config/cmd/utils/tests/: test_clients.py  (+1 more)
os_cloud_config/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  log.py  processutils.py
os_cloud_config/tests/: base.py  test_flavors.py  test_glance.py  test_keystone.py  test_keystone_pki.py  test_neutron.py  test_nodes.py  test_os_cloud_config.py  test_ssh.py  test_ssl_pki.py  test_utils.py
os_cloud_config/utils/: __init__.py  _clients.py  clients.py
os_cloud_config/utils/tests/: test_clients.py
