[metadata]
name = os-cloud-config
summary = Configuration for OpenStack clouds.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    os_cloud_config

[entry_points]
console_scripts =
    init-keystone = os_cloud_config.cmd.init_keystone:main
    setup-endpoints= os_cloud_config.cmd.setup_endpoints:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_cloud_config/locale
domain = os-cloud-config

[update_catalog]
domain = os-cloud-config
output_dir = os_cloud_config/locale
input_file = os_cloud_config/locale/os-cloud-config.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_cloud_config/locale/os-cloud-config.pot
